PostGIS 3.2.9dev
xxxx/xx/xx

PostgreSQL 9.6-15 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes  *

 - #5951, [topology] Fix crash in ST_GetFaceEdges with corrupted topology (Sandro Santilli)
 - #5947, [topology] Fix crash in ST_ModEdgeHeal (Sandro Santilli)
 - #5925, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)
 - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
 - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
 - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
 - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)
 - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
 - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
 - #5921, Crash freeing uninitialized pointer (Arsenii Mukhin)
 - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
 - #5905, Crash on deeply nested geometries (Paul Ramsey)
 - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
 - #5917, ST_Relate becomes unresponsive (Paul Ramsey)
 - #5991, CircularString distance error (Paul Ramsey)
 - #5962, Consistent clipping of MULTI/POINT (Paul Ramsey)
 - #5989, CurvePolygon distance error (Paul Ramsey)
 - #6028, Crash indexing malformed empty polygon (Paul Ramsey)


PostGIS 3.2.8
2024/12/22

PostgreSQL 9.6-15 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes  *

 - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology (Björn Harrtell)
 - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)
 - #5765, Handle nearly co-linear edges with slightly less slop (Paul Ramsey)
 - #5745, St_AsLatLonText rounding errors (Paul Ramsey)